--- a/soilPrepareInfo.html
+++ b/soilPrepareInfo.html
@@ -66,7 +66,7 @@
                             закриття вологи та підгодівлю. 
                             Використовуючи традиційну оранку варто враховувати, що регулярні глибокі обробки можуть 
                             знижувати родючість землі через мінералізацію гумусу. </p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/Plow.png" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="assets/img/plow.png" alt="..." /></a>
                         <h2 class="section-heading">Боронування (закриття вологи)</h2>
                         <p> &nbsp Ця операція необхідна для збереження вологи. Проте, надто раннє виконання робіт за надмірної вологості призведе до утворення грунтової кірки,
                              а пізнє до значних втрат вологи. </p>
